# npmclean

./: .gitignore  .npmcleanrc.yml  Cargo.toml  LICENSE  README.md  README.zh.md  RELEASE.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  TECHNICAL_SPEC.md
docs/zh/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  TECHNICAL_SPEC.md
src/: cleaner.rs  cli.rs  main.rs  scanner.rs
src/config/: loader.rs  mod.rs  schema.rs
src/plugins/: examples.rs  mod.rs  registry.rs
src/project/: analyzers.rs  detector.rs  mod.rs
src/utils/: fs_utils.rs
