[package]
name = "npmclean"
version = "0.1.0"
edition = "2024"
description = "A fast and safe cleaner for node_modules and other frontend build artifacts"
authors = ["Xu_mj"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Xu-Mj/npmclean"
keywords = ["npm", "node", "cleaner", "node_modules", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Command line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# File operations
walkdir = "2.3"
remove_dir_all = "0.8"
globset = "0.4"
fs_extra = "1.3"

# Concurrency & Utilities
rayon = "1.7"
num_cpus = "1.15"
dirs = "5.0"

# User interface
console = "0.15"
indicatif = "0.17"
log = "0.4"
serde_json = "1.0.140"

# 日志处理
chrono = "0.4"
fern = "0.6"

[dev-dependencies]
tempfile = "3.5"
assert_fs = "1.0"
criterion = "0.4"
proptest = "1.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
